--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;500;600;700&display=swap');
+@import 'react-date-range/dist/styles.css'; 
+@import 'react-date-range/dist/theme/default.css';
 
 body {
   margin: 0;
