--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -12,6 +12,10 @@
   margin: 20px 0 100px 0;
 }
 
+.headerContainer.hotelList {
+  margin: 20px 0 20px 0;
+}
+
 .headerList {
   display: flex;
   gap: 40px;
