--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,8 +7,8 @@
 }
 
 .headerContainer {
-  width: 1200px;
-  max-width: 100%;
+  max-width: 1200px;
+  width: 100%;
   margin: 20px 0 100px 0;
 }
 
@@ -56,7 +56,7 @@
   padding: 10px;
   position: absolute;
   bottom: -25px; /* height+padding = 50px; middle = 25px */
-  width: 1200px;
+  width: 1175px;
 }
 
 .headerSearchIcon {
@@ -91,7 +91,7 @@
 }
 
 .headerSearchText {
-  width: 250px;
+  /* width: 250px; */
   color: #053b50;
   cursor: pointer;
   opacity: 70%;
@@ -100,6 +100,7 @@
 .calander {
   position: absolute;
   top: 50px;
+  z-index: 10;
 }
 
 .options {
@@ -111,6 +112,7 @@
   position: absolute;
   top: 50px;
   box-shadow: 0px 1px 8px 1px rgba(0, 0, 0, 0.55);
+  z-index: 10;
 }
 
 .optionItem {
