--- a/src/Components/Featured/Featured.css
+++ b/src/Components/Featured/Featured.css
@@ -1,6 +1,4 @@
 .featured {
-  margin: 0 auto;
-  margin-top: 50px;
   width: 1200px;
   display: flex;
   justify-content: space-between;
@@ -9,6 +7,7 @@
 }
 
 .featuredItem {
+  flex: 1;
   position: relative;
   color: white;
   overflow: hidden;
@@ -17,13 +16,13 @@
 .featuredImg {
   height: 300px;
   width: 100%;
-  max-width: 500px;
+  /* max-width: 500px; */
   object-fit: cover;
   border-radius: 10px;
 }
 
 .featuredTitles {
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   left: 10px;
 }
