--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,6 +1,7 @@
-/* .homeContainer {
+.homeContainer {
+  margin-top: 80px;
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: 30px;
-} */
+  /* gap: 30px; */
+}
